<resources>
    <string name="app_name">Soccer Analyst</string>
    <string name="events">Events</string>
    <string name="settings">Settings</string>
    <string name="game">Game</string>
    <string name="addGameInTheSettings">Add game in the settings</string>
    <string name="addEventsInTheSettings">Add events in the settings</string>
    <string name="theEventWasRecorded">The event was recorded</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="theEventIsDeleted">The event is deleted</string>
    <string name="theGamesListIsEmptyAddGameInTheSettings">The games list is empty\nadd game in the settings</string>
    <string name="noEventsHaveBeenRecordedYet">No events have been recorded yet</string>
    <string name="swipeTDelete">Swipe to delete</string>
    <string name="failedToSaveTheFile">Failed to save the file</string>
    <string name="theFileIsSaved">The file is saved</string>
    <string name="saveAsAFile">Save as a file 📁</string>
    <string name="homeTeam">Home team</string>
    <string name="awayTeam">Away team</string>
    <string name="half1">Half 1</string>
    <string name="half2">Half 2</string>
    <string name="extraTime1">ET 1</string>
    <string name="extraTime2">ET 2</string>
    <string name="playerNumber">player number</string>
    <string name="saveTheTimeOrCustomizedEvent">Save the time / Customized event</string>
    <string name="gamesList">Games list</string>
    <string name="eventsList">Events list</string>
    <string name="editGames">Edit games</string>
    <string name="editEvents">Edit events</string>
    <string name="enterEventName">Enter event name</string>
    <string name="enterGameName">Enter game name</string>
    <string name="toTopOfTheList">to top</string>
    <string name="toBottomOfTheList">to bottom</string>
    <string name="addEvent">Add event</string>
    <string name="deleteEvent">Delete event</string>
    <string name="renameEvent">Rename event</string>
    <string name="addGame">Add game</string>
    <string name="deleteGame">Delete game</string>
    <string name="renameGame">Rename game</string>
</resources>
