<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context="ran.tmpTest.fragments.GameFragment">

    <Spinner
        android:id="@+id/choseGameDropDownList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintTop_toTopOf="parent"
    />


    <RadioGroup
        android:id="@+id/gamePart"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/radio_group_outline"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choseGameDropDownList"
    >

        <RadioButton
            android:id="@+id/et2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/no_chosen_radio_button"
            android:button="@null"
            android:gravity="center"
            android:text="@string/extraTime2"
            android:textSize="20sp"
        />

        <RadioButton
            android:id="@+id/et1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/no_chosen_radio_button"
            android:button="@null"
            android:gravity="center"
            android:text="@string/extraTime1"
            android:textSize="20sp"
        />


        <RadioButton
            android:id="@+id/half2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/no_chosen_radio_button"
            android:button="@null"
            android:gravity="center"
            android:text="@string/half2"
            android:textSize="20sp"
        />

        <RadioButton
            android:id="@+id/half1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/no_chosen_radio_button"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/half1"
            android:textSize="20sp"
        />

    </RadioGroup>

    <TextView
        android:id="@+id/playerNumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playerNumber"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/gamePart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/playerNumsVerticalDivider"
    />


    <NumberPicker
        android:id="@+id/playerDigit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playerNumTextView"
    />

    <NumberPicker
        android:id="@+id/playerDigit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/playerDigit1"
        app:layout_constraintTop_toBottomOf="@id/playerNumTextView"
    />

    <View
        android:id="@+id/playerNumsVerticalDivider"
        android:layout_width="4dp"
        android:layout_height="0dp"
        android:layout_marginLeft="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toTopOf="@id/playerNumTextView"
        app:layout_constraintBottom_toTopOf="@id/selectTeam"
        app:layout_constraintLeft_toRightOf="@id/playerDigit2"
        />


    <TextView
        android:id="@+id/clockText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="50sp"
        android:text="00:00"
        android:visibility="visible"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/playerNumsVerticalDivider"
        app:layout_constraintTop_toBottomOf="@id/gamePart"
        app:layout_constraintBottom_toTopOf ="@id/playBtn"
    />


    <ImageButton
        android:id="@+id/stopBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_media_previous"
        app:layout_constraintTop_toBottomOf="@id/clockText"
        app:layout_constraintBottom_toTopOf="@id/selectTeam"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/playerNumsVerticalDivider"
    />

    <ImageButton
        android:id="@+id/playBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_media_play"
        app:layout_constraintTop_toBottomOf="@id/clockText"
        app:layout_constraintBottom_toTopOf="@id/selectTeam"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/playerNumsVerticalDivider"
    />

    <RadioGroup
        android:id="@+id/selectTeam"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:background="@drawable/radio_group_outline"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/playerDigit1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
    >

        <RadioButton
            android:id="@+id/away_team"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/no_chosen_radio_button"
            android:button="@null"
            android:gravity="center"
            android:text="@string/awayTeam"
            android:textSize="24sp"
        />


        <RadioButton
            android:id="@+id/noTeam"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/chosen_radio_button"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text=" "
            android:textSize="24sp"
        />

        <RadioButton
            android:id="@+id/home_team"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/no_chosen_radio_button"
            android:button="@null"
            android:gravity="center"
            android:text="@string/homeTeam"
            android:textSize="24sp"
        />

    </RadioGroup>

    <View
        android:id="@+id/bottomSelectTeamDivider"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/selectTeam"
    />

    <Button
        android:id="@+id/specialEventBtn"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saveTheTimeOrCustomizedEvent"
        app:layout_constraintTop_toBottomOf="@id/bottomSelectTeamDivider"
    />

    <View
        android:id="@+id/bottomSpecialEventBtnDivider"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/specialEventBtn"
    />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scrollViewLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/bottomSpecialEventBtnDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="1">

        <TextView
            android:id="@+id/msgToUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/scrollViewLayout"
            app:layout_constraintBottom_toBottomOf="parent"
        />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >

            <LinearLayout
                android:id="@+id/buttonList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
            />


        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>